[package]
name = "audiopus_sys"
version = "0.2.1"
license = "ISC"
repository = "https://github.com/lakelezz/audiopus_sys.git"
authors = ["Lakelezz <lakelezz@protonmail.ch>"]
keywords = ["audio", "opus", "codec"]
categories = ["api-bindings", "compression", "encoding",
	"multimedia::audio", "multimedia::encoding"]
description = "FFI-Binding to Opus, dynamically or statically linked for Windows and UNIX."
readme = "README.md"
documentation = "https://docs.rs/audiopus_sys"
edition = "2024"

[dependencies]

[build-dependencies]
log = "0.4.29"
pkg-config = "0.3.32"
cmake = "0.1.54"

[build-dependencies.bindgen]
version = "0.72.1"
optional = true

[features]
default = []
dynamic = []
static = []
generate_binding = ["bindgen"]
